--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
     			</div>
     			<div class="col s12 m4">
     				<img class="hefty" src="hefty.jpg">
-    			</div>	
+    			</div>
     	</div>
+    		<div class="row">
+    			<div class="result-1"></div>
+    			<div class="result-2"></div>
+    			<div class="result-3"></div>
+    		</div>
     </div>
 </body>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
 </html>
